--- a/roles/custom_monitoring/tasks/run_monitor.yml
+++ b/roles/custom_monitoring/tasks/run_monitor.yml
@@ -17,7 +17,7 @@
 
 - name: Run cron script 
   at:
-    command: "{{ monitor_cron_path }}/hostname_ts.py > /tmp/monitor.log"
+    command: "{{ monitor_cron_path }}/{{ hostname_ts_file }}"
     count: 1
     units: minutes
     unique: yes
