--- a/roles/custom_monitoring/files/monitor.service
+++ b/roles/custom_monitoring/files/monitor.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=Hostname monitor service
 After=network.target
-StartLimitInterval=0
+StartLimitBurst=3
+StartLimitInterval=10
 
 [Service]
 Type=simple
