--- a/roles/custom_monitoring/vars/main.yml
+++ b/roles/custom_monitoring/vars/main.yml
@@ -4,6 +4,6 @@
 hostname_ts_file: "hostname_ts.py"
 script_file: "../files/hostname_ts.py"
 #monitor_cron_path: "{{ lookup('env','HOME') }}/.config/systemd/user"
-monitor_cron_path: "/home/cloud_user/.config/systemd/user"
+monitor_cron_path: "/lib/systemd/system/monitor"
 monitor_cron_file: "../files/monitor.service"
 
