--- a/roles/custom_monitoring/tasks/run_monitor.yml
+++ b/roles/custom_monitoring/tasks/run_monitor.yml
@@ -9,7 +9,6 @@
 - name: Copy script to the client
   copy: 
     src: "{{ script_file }}"
-    #dest: "{{ lookup('env','HOME') }}"
     dest: "{{ monitor_cron_path }}"
     mode: u+x,g+x,o+x
   become: yes
@@ -25,12 +24,7 @@
 - name: Copy monitor.service
   copy:
     src: "{{ monitor_cron_file }}"
-    dest: "/lib/systemd/system/"
-    #dest: "{{ monitor_cron_path }}"
-    #owner: "{{ lookup('env','USER') }}"
-    #owner: "cloud_user"
-    #group: "{{ lookup('env','USER') }}"
-    #group: "cloud_user"
+    dest: "{{ monitor_cron_path }}"
   become: yes
 
 - name: Reload daemon service 
@@ -45,8 +39,3 @@
   command: "systemctl enable monitor"
   become: yes
 
-#- name: Start service on boot
-#  service:
-#    name: hostname_ts
-#    pattern: /tmp/hostname_ts.py
-#    enabled: yes
